--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.6",
     "react-bootstrap-native-slider": "^2.0.1",
+    "react-device-detect": "^0.1.0",
     "react-dom": "^15.3.1",
     "react-grid-layout": "^0.16.0",
     "react-icons": "^2.2.7",
