--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^15.3.1",
     "react-grid-layout": "^0.16.0",
     "react-icons": "^2.2.7",
+    "react-json-table": "^0.1.1",
     "react-router": "^2.7.0",
     "react-router-bootstrap": "^0.23.1",
     "serialport": "^4.0.7",
